fix: increase z-index of header for improved stacking context

--- a/style.css
+++ b/style.css
@@ -556,7 +556,7 @@ header {
     text-align: center;
     line-height: 25px;
     position: relative;
-    z-index: 2;
+    z-index: 10;
 }
 
 /* INFO SECTION //////////////////////////////////////////////////////////////////////////////////// */
